# my-openenv-soc

./: Dockerfile  README.md  env.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  server.py  tasks.py
server/: app.py
